--- a/outils-notions-genie-logiciel-niveau-l2/presentation/css/theme/source/genie-logiciel.scss
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/css/theme/source/genie-logiciel.scss
@@ -1,3 +1,13 @@
+.reveal,
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  font-family: "Nanum Gothic Coding";
+}
+
 .ti {
   font-size: 10rem;
   color: chocolate;
