feat(presentation): ajout illustration genie logiciel

--- a/outils-notions-genie-logiciel-niveau-l2/presentation/css/theme/source/genie-logiciel.scss
+++ b/outils-notions-genie-logiciel-niveau-l2/presentation/css/theme/source/genie-logiciel.scss
@@ -41,7 +41,11 @@
     width: 35rem;
   }
 }
-
+.illustration-md {
+  img {
+    width: 42rem;
+  }
+}
 .illustration-bg {
   img {
     width: 55rem;
